# soul-core

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: error.rs  lib.rs  observation.rs  snapshot.rs  types.rs
src/agent/: mod.rs
src/context/: mod.rs
src/cost/: budget.rs  mod.rs  pricing.rs
src/executor/: direct.rs  http.rs  llm.rs  mcp.rs  mod.rs  shell.rs
src/hook/: mod.rs
src/mcp/: bridge.rs  mod.rs  protocol.rs  transport.rs  types.rs
src/memory/: mod.rs
src/permission/: hook.rs  manager.rs  mod.rs  pattern.rs
src/planner/: mod.rs
src/provider/: anthropic.rs  mod.rs  openai.rs  registry.rs  remap.rs  traits.rs
src/rlm/: dsl.rs  engine.rs  environment.rs  mod.rs
src/semantic_recursion/: context_engine.rs  fragment.rs  graph.rs  mod.rs  symlink.rs  symlink_tool.rs  tokenizer.rs  vector_store.rs
src/session/: mod.rs
src/skill/: bridge.rs  executor.rs  loader.rs  mod.rs  parser.rs
src/soullog/: mod.rs
src/subagent/: mod.rs
src/tool/: mod.rs
src/vexec/: mod.rs  native.rs
src/vfs/: memory.rs  mod.rs  native.rs
tests/: integration.rs
