[package]
name = "soul-core"
version = "0.2.0"
edition = "2021"
description = "Async agentic runtime for Rust — steerable agent loops, context management, multi-provider LLM abstraction"
license = "MIT"
repository = "https://github.com/AMAI-LABS/soul-core"
keywords = ["agent", "llm", "ai", "async", "streaming"]
categories = ["asynchronous", "web-programming"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client (for LLM providers)
reqwest = { version = "0.12", features = ["json", "stream"] }
reqwest-eventsource = "0.6"

# Error handling
thiserror = "2"
anyhow = "1"

# Crypto (for auth, hashing)
sha2 = "0.10"
uuid = { version = "1", features = ["v4", "serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Concurrency
dashmap = "6"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
wiremock = "0.6"
assert_matches = "1.5"
tracing-test = "0.2"
